# bip39

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yaml
scripts/: build-release.sh  cargo-sanitized.sh  check-binary-paths.sh  package-linux.sh  package-macos.sh
src/: main.rs
