[package]
name = "bip39"
version = "0.1.0"
edition = "2021"

[dependencies]
# Cryptography & Blockchain
bip39         = { version = "2.1", features = ["all-languages"] }
bitcoin       = "0.32"
bs58          = "0.5"
ed25519-dalek = "2"
hex           = "0.4"
memsec        = "0.7"
secrecy       = { version = "0.10", features = ["serde"] }
sskr          = "0.8"
sha2          = "0.10"
slip10        = "0.4"
tempfile      = "3"
tiny-keccak   = { version = "2.0", features = ["keccak"] }
winapi        = { version = "0.3", features = ["winnt", "memoryapi"] }
zeroize       = "1"

# Terminal UI & Graphics
crossterm     = "0.29"
image         = "0.25"
qrcode        = "0.14"
ratatui       = "0.29"
terminal_size = "0.4"
viuer         = { version = "0.9", features = ["print-file"] }

# Utilities
rand          = { version = "0.8", features = ["std"] }
dirs          = "5"
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"

[profile.release]
debug = false
panic = "abort"
strip = true
lto = true
codegen-units = 1
