[package]
name = "bip39"
version = "0.1.0"
edition = "2021"

[dependencies]
# Cryptography & Blockchain
bip39         = { version = "2.1", features = ["all-languages"] }
bitcoin       = "0.32"
bs58          = "0.5"
ed25519-dalek = "2"
hex           = "0.4"
hmac          = "0.12"
sskr          = "0.8"
sha2          = "0.10"
tempfile      = "3"
tiny-keccak   = { version = "2.0", features = ["keccak"] }
zeroize       = "1"

# Utilities
rand          = { version = "0.8", features = ["std"] }
dirs          = "5"
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
eframe        = "0.34.2"
rfd           = "0.17.2"

[profile.release]
debug = false
panic = "abort"
strip = true
lto = true
codegen-units = 1
